k8s/guestbook/frontend-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - nikola.kratoss.club
    secretName: nikola-kratos
  rules:
  - host: nikola.kratoss.club
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
